Revelation changelog

---------------[ xxxx-xx-xx : 0.5.0 ]---------------

2006-02-08  Erik Grinaker <erikg@codepoet.no>

	* cleaned up preferences dialog

	* set about dialog as transient of parent window

	* password generator now always avoids ambiguous characters

2006-02-06  Erik Grinaker <erikg@codepoet.no>

	* don't use deprecated gnome-python modules

	* moved preference dialog from dialog module to main script

	* use gtk.AboutDialog for about dialogs

	* removed the Help > Homepage menu item

	* use gnome.ui.authentication_manager_init() instead of wrapping it

	* use gnomeapplet.Applet.request_focus() instead of wrapping it

	* removed gnomemisc module

	* depend on pygtk 2.8 and gnome-python 2.10

	* use gtk.FileChooserButton for selecting files

	* make file buttons work for remote files

---------------[ 2006-02-06 : 0.4.7 ]---------------

2006-02-03  Erik Grinaker <erikg@codepoet.no>

	* ignore errors when automatically reloading file in applet

2006-02-02  Erik Grinaker <erikg@codepoet.no>

	* added dependencies to README

	* build pyc/pyo files correctly when using DESTDIR with make install

	* bumped version number to 0.4.7

	* don't use gnomevfs.URI.is_local, stats all filesystems (hangs on
	missing network mounts)

2006-01-31  Erik Grinaker <erikg@codepoet.no>

	* don't crash when unlocking file

---------------[ 2006-01-26 : 0.4.6 ]---------------

2006-01-26  Erik Grinaker <erikg@codepoet.no>

	* fixed some rendering issues with the new password entry

2006-01-25  Erik Grinaker <erikg@codepoet.no>

	* ~ in filenames will now be expanded to homedir

2006-01-24  Erik Grinaker <erikg@codepoet.no>

	* make password entry min 16px to avoid resize on icon display

2006-01-22  Erik Grinaker <erikg@codepoet.no>

	* bumped version number to 0.4.6

	* rewrote the password generator

	* improved password checking

	* fixed some issues with the new password entry

2006-01-21  Erik Grinaker <erikg@codepoet.no>
