@@ -10,6 +10,8 @@ Revelation changelog
 
 	* password generator now always avoids ambiguous characters
 
+	* use GPL notice instead of full GPL in about dialog
+
 2006-02-06  Erik Grinaker <erikg@codepoet.no>
 
 	* don't use deprecated gnome-python modules
